# aehobak

./: Cargo.toml  LICENSE  README.md
.github/workflows/: bench-summary.py  rust.yml
benches/: all.rs  diff.rs  patch.rs
examples/: bench.rs  diff.rs  patch.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: diff.rs  patch.rs
src/: control.rs  decode.rs  diff.rs  encode.rs  lib.rs  libsais.rs  patch.rs
tests/: data.rs
