[package]
name = "aehobak"
version = "0.0.14"
authors = ["David Michael Barr <b@rr-dav.id.au>"]
description = "Transcoder for bsdiff binary patches."
readme = "README.md"
categories = ["compression"]
keywords = ["bsdiff", "patch", "diff", "delta", "binary"]
license = "BSD-2-Clause"
homepage = "https://lib.rs/aehobak"
repository = "https://github.com/barrbrain/aehobak"
edition = "2021"
include = ["src/*.rs", "tests/*.rs", "benches/*.rs", "examples/*.rs", "LICENSE", "README.md", "Cargo.toml"]

[dependencies]
streamvbyte64 = "0.2.0"
anyhow = "1.0"

[dev-dependencies]
bsdiff = "0.2.1"
gungraun = "0.17.0"
lz4_flex = "0.11.3"
quickcheck = "1.0.3"
rand_xoshiro = "0.7.0"

[profile.test]
opt-level = 2

[lib]
bench = false

[[bench]]
name = "all"
harness = false
