[package]
name = "aehobak"
version = "0.0.11"
authors = ["David Michael Barr <b@rr-dav.id.au>"]
description = "Transcoder for bsdiff binary patches."
readme = "README.md"
categories = ["compression"]
keywords = ["bsdiff", "patch", "diff", "delta", "binary"]
license = "BSD-2-Clause"
homepage = "https://lib.rs/aehobak"
repository = "https://github.com/barrbrain/aehobak"
edition = "2021"
include = ["src/*.rs", "tests/*.rs", "benches/*.rs", "examples/*.rs", "LICENSE", "README.md", "Cargo.toml"]

[dependencies]
libsais-sys = { version = "0.2.0", default-features = false }
streamvbyte64 = "0.2.0"

[dev-dependencies]
bsdiff = "0.2.1"
criterion = "0.5.1"
lz4_flex = "0.11.3"
quickcheck = "1.0.3"
rand_xoshiro = "0.7.0"

[[bench]]
name = "patch"
harness = false

[[bench]]
name = "diff"
harness = false
