[package]
name = "aehobak-fuzz"
version = "0.0.0"
publish = false
license = "BSD-2-Clause"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
bsdiff = "0.2.1"
libfuzzer-sys = "0.4"
rand_xoshiro = "0.7.0"

[dependencies.aehobak]
path = ".."

[[bin]]
name = "diff"
path = "fuzz_targets/diff.rs"
test = false
doc = false
bench = false

[[bin]]
name = "patch"
path = "fuzz_targets/patch.rs"
test = false
doc = false
bench = false
